css/style.css
@import url('https://fonts.googleapis.com/css?family=Nunito+Sans:300,400,600,700');

/**  Basic Page CSS **/
body{
  font-family: "Nunito Sans", sans-serif;
  font-weight: 300;
  font-size: 2em;
  position: relative;
}

h1, h2, h3, h4, h5, h6 {
  font-family: "Nunito Sans", sans-serif;
  font-weight: 100;
  margin: 0;
}

@media all and (max-width: 2560px) { /* screen size until 1200px */
    body {
        font-size: 1.8em; /* 1.5x default size */
    }
}
@media all and (max-width: 1200px) { /* screen size until 1200px */
    body {
        font-size: 1.5em; /* 1.5x default size */
    }
}
@media all and (max-width: 800px) { /* screen size until 1000px */
    body {
        font-size: 1em; /* 1.2x default size */
    }
}



/**  Header Navigation **/

header .navbar {
  padding: 30px 0;
  transition: all .5s ease-out;
}

header .navbar-default {
  background-color: transparent;
  border: none;
}

header .navbar-default .navbar-nav a {
  color: white;
  padding: 5px 8px;
}

header .navbar-default .navbar-nav a:hover {
  color: #ffc266;
}

header .navbar-default .navbar-nav .active a {
  font-weight: 700;
  color: #FFD953;
  background: transparent;
  border-bottom: 4px solid #FFD953;
  text-shadow: none;
}

header .navbar-default .navbar-nav .active a:hover {
  color: #80b3ff;
  background: transparent;
  text-shadow: none;
}


/**  Navbar Toggle **/
header .navbar-toggle {
  background-color: #279182;
}

header .navbar-default .navbar-toggle .icon-bar {
  background-color: white;
}

@media only screen
and (max-width: 768px) {
  header .navbar-collapse.in {
    background-color: rgba(0,0,0, .5);
  }
}

/**  nav inbody **/

header .inbody {
  background: rgb(35,80,103);
}

header .navbar.inbody {
  padding-top: 0;
  padding-bottom: 0;
}

header .navbar.inbody .navbar-nav {
  padding-top: 10px;
}

header .inbody .navbar-brand {
  background-size: 43px;
  background-position: top left;
  margin-top: 5px;
  padding-bottom: 0;
  margin-left: 10px;
}

header .inbody .navbar-brand h1 {
  font-size: 1.1em;
  padding-left: 38px;
}

header .inbody .navbar-brand span.subhead {
  display: none;
}


/**header .introduction {
  position: absolute;
  bottom: 50%;
  left: 25%;
  z-index: 100;
  color: white;
  text-shadow: 0 1px 2px rgba(0,0,0,.6);
  text-align: center;
  margin-bottom: 30px;
}*/
header .introduction {
    width: 90%;
    height: 50%;

    position: absolute;
    z-index: 200;
    top:200px;
    bottom: 0;
    left: 0;
    right: 0;

    margin: auto;
    color: white;
    text-shadow: 0 1px 2px rgba(0,0,0,.6);
    text-align: center;
}
header .introduction img.icon {
  display: none;
  width: 150px;
  margin: 0 auto;
  margin-bottom: 0px;
  border-radius: 200px;
}
header .introduction h3 {
  font-size: 4.2em;
  margin: 10px;
  color: #FFD953;

}
header .introduction p {
  font-size: 1.5em;
  margin: 10px;
  color: #FFFFFF;
}


/**  Carousel Fade **/

.carousel.fade {
  opacity: 1;
}

.carousel.fade .item {
  transition: opacity ease-out .7s;
  left: 0;
  opacity: 0;
  top: 0;
  position: absolute;
  width: 100%;
  display: block;
}

.carousel.fade .item:first-child {
  top: auto;
  opacity: 1;
  position: relative;
}

.carousel.fade .item.active {
  opacity: 1;

}

.carousel-control {
  opacity: 0;
}

.carousel-control.right,
.carousel-control.left {
  background-image: none;
}

#featured .item {
  background-size: cover;
  background-repeat: no-repeat;
  background-position: center center;
  width: 100%;
  height: 100%;
  filter: brightness(50%);
}







/**  Page **/
.page {
  padding: 50px 0;
}

.page h2 {
  color: #FFD953;
  text-align: center;
  margin-bottom: 30px;
}




/**  Page -- About Me **/

#about {
  padding: 0px;
  /**background-image: linear-gradient(to bottom, #E4D29D, #CDAE50);*/
}


.about_text {
  padding: 20px 0px;
  left: 0;
  right: 0;
  z-index: 150;
  background: #042C45;
}

.about_text h3 {
  
  font-weight: 600;
  font-size: 3em;
  color: #FFD953;
  padding: 10px;
  margin: 0px 10px 0px;
}

.about_text p {
  font-size: 1.2em;
  padding: 1px;
  margin: 0px 20px;
  color: #FFFFFF;
}

.about_text img {
  width: 100%;
}
.halfPicture{
  background: url(../wp/train.jpg) no-repeat center center;
  background-size: cover;
}
.extend{
  height: auto !important;
}
.restore {
  background-size: cover;
}
.elim {
  display: none;
}

/**
.about_text_adjustment {
  background: url(../wp/train.jpg) no-repeat center center;
  background-size: cover;
  filter: brightness(70%);
}*/
.container_fluid .about_text_adjustment p {
  font-size: 1em;
  color: #000000;
}











/**  Page -- projects **/

#projects {
  padding: 0;
  /**background: url(../wp/6.jpg) no-repeat fixed center;*/
  background-color: #666666;
  background-size: cover;
}

#projects h2 {
  /**display: none;*/
  font-size: 3em;
  color: #FFD953;
  line-height: 1.8;
  font-weight: bold;
  margin: auto;
  text-shadow: 0 1px 2px rgba(0,0,0,.6);
  text-align: center;
}

#projects blockquote {
  margin: 0;
  padding: 0;
  border-left: none;
  min-height: 500px;
  position: relative;
}

#projects blockquote .quote {
  background-color: rgba(255,255,255,.6);
  padding: 20px 5%;
  position: absolute;
  bottom: 0;
  width: 75%;
  font-weight: 400;
  border-radius: 0 50px 0 0;
}

#projects blockquote .quote:hover {
  background-color: rgba(239,240,196,.9);
}

#projects #janeh {
  background: url(../wp/globe.jpg) no-repeat center center;
  background-size: cover;
}

#projects #johnb {
  background: url(../wp/pocketnote.jpg) no-repeat center center;
  background-size: cover;
}

#projects #mcphersons {
  background: url(../wp/ticketBuddy.jpg) no-repeat center center;
  background-size: cover;
}

#projects #lorraines {
  background: url(../wp/sweeper.jpg) no-repeat center center;
  background-size: cover;
}

#projects .quote {
  font-size: 1.2em;
  line-height: 110%;
  font-weight: 400;
}


#projects .quote .more, #projects .customer {
  opacity: 0;
  font-size: 0;
  line-height: 0;
  padding-top: 10px;
}


#projects .quote:hover .more {
  font-family: "Open Sans", sans-serif;
  font-weight: 100;
  display: block;
  opacity: 1;
  font-size: .8em;
  line-height: 120%;
}

#projects .quote:hover .customer {
  display: block;
  font-size: .7em;
  text-align: right;
}
x

#projects .quote:hover .intro::after {
  content: '';
}





/**  Page -- contact **/
#contact{
  background: rgba(104,73,49,.5);
  background: #042C45;
  background-size: cover;
  text-align: center;
}
#contact img.icon {
  text-align: center;
  display: block;
  margin: 5px auto;
  width: 120px;
}
#icons {
  padding: 0 5%;
}
/**#contact .form {
  background-color: #55ffff;
  background-size: cover;
  margin: 0 auto;
}
*/
/**#contact .container {
  background-color: #55ffff;
  background-size: cover;
}
*/

.links {
  margin: 0px 0;
  text-align: center;
  max-width:100%;
  max-height:100%;
}
/**@media only screen 
and (min-width: 450px)
and (max-width: 768px) {
  .link img {
    padding: 0 20%;
  }
}


*/
input{
  -webkit-border-radius: 5px;
  -moz-border-radius: 5px;
  border-radius: 5px;
}
textarea {
  -webkit-border-radius: 5px;
  -moz-border-radius: 5px;
  border-radius: 5px;
}
.contact_title {
  font-size: 1.5em;
  color: #FFD953;
}
#contact h3 {
  margin: 10px;
  font-size: 2em;
  color: #FFD953;
  line-height: 1.8;
}
#git {
  border-radius: 900px;
}

